force-app/main/default/objects/AdminItemRule__c/AdminItemRule__c.object-meta.xml
<CustomObject>
    <label>Admin Item Rule</label>
    <nameField>
        <displayFormat>AIR{000000}</displayFormat>
        <label>Admin Item Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Item Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>