force-app/main/default/objects/AdminItemRule__c/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <label>Behavior</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InActive</fullName>
                <default>true</default>
                <label>InActive</label>
            </value>
            <value>
                <fullName>DoNotShow</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>AlwaysShow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>