force-app/main/default/objects/AdminItemRule__c/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <description>supports icons from https://v1.lightningdesignsystem.com/icons/, example: utility:account</description>
    <inlineHelpText>supports icons from https://v1.lightningdesignsystem.com/icons/, example: utility:account</inlineHelpText>
    <label>Icon Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>