force-app/main/default/objects/AdminItemRule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>NOT ( ISPICKVAL(Behavior__c,&apos;IsActive&apos;) )</formula>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>