force-app/main/default/objects/AdminItemRule__c/fields/ItemKey__c.field-meta.xml
<CustomField>
    <fullName>ItemKey__c</fullName>
    <description>Recommended: Use a consistent key for referencing in LWC/Apex logic</description>
    <inlineHelpText>Recommended: Use a consistent key for referencing in LWC/Apex logic</inlineHelpText>
    <label>Item Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>