force-app/main/default/objects/AdminItemRule__c/fields/ItemLabel__c.field-meta.xml
<CustomField>
    <fullName>ItemLabel__c</fullName>
    <description>Human-readable name of the item being controlled</description>
    <inlineHelpText>Human-readable name of the item being controlled</inlineHelpText>
    <label>Item Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>