force-app/main/default/objects/AdminItemRule__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Quick Launch</fullName>
            </value>
            <value>
                <fullName>License Utilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>