force-app/main/default/objects/AdminItemRule__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UserLicense</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>PermissionSetLicense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>