force-app/main/default/objects/AdminItemRule__c/fields/UnitCost__c.field-meta.xml
<CustomField>
    <fullName>UnitCost__c</fullName>
    <defaultValue>1</defaultValue>
    <label>UnitCost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>