force-app/main/default/objects/AdminItemRule__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL value When talking about navigation</description>
    <inlineHelpText>URL value When talking about navigation</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>