force-app/main/default/objects/AdminItemRule__c/listViews/Active_Admin_Item_Rules.listView-meta.xml
<ListView>
    <fullName>Active_Admin_Item_Rules</fullName>
    <columns>NAME</columns>
    <columns>Behavior__c</columns>
    <columns>Module__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>ItemKey__c</columns>
    <columns>ItemLabel__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Admin Item Rules</label>
</ListView>