force-app/main/default/objects/AdminItemRule__c/listViews/license_utilization.listView-meta.xml
<ListView>
    <fullName>license_utilization</fullName>
    <columns>NAME</columns>
    <columns>Behavior__c</columns>
    <columns>Module__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>ItemKey__c</columns>
    <columns>ItemLabel__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Module__c</field>
        <operation>equals</operation>
        <value>License Utilization</value>
    </filters>
    <label>License Utilization</label>
</ListView>