force-app/main/default/objects/AdminItemRule__c/listViews/Module_Item_Rules.listView-meta.xml
<ListView>
    <fullName>Module_Item_Rules</fullName>
    <columns>NAME</columns>
    <columns>Behavior__c</columns>
    <columns>Module__c</columns>
    <columns>ObjectAPIName__c</columns>
    <columns>ItemKey__c</columns>
    <columns>ItemLabel__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Module - Item Rules</label>
</ListView>